[20.2] Registry rework (#257)
The Blogpost is available here: https://neoforged.net/news/20.2registry-rework/

---------

Co-authored-by: Minecraftschurli <minecraftschurli@gmail.com>
Co-authored-by: Dennis C <xfacthd@gmx.de>
Co-authored-by: Technici4n <13494793+Technici4n@users.noreply.github.com>